cmake_minimum_required(VERSION 3.24)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled backjoon2480.c backjoon1978.c backjoon10828.c backjoon10039.c backjoon5543.c backjoon2752.c backjoon10797.c backjoon10101.c backjoon10872.c backjoon5596.c backjoon1152.c backjoon2577.c backjoon2869.c)
